--- a/menu-css/src/app/home/home.page.html
+++ b/menu-css/src/app/home/home.page.html
@@ -1,20 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<div class="home-page">
+  <ion-button routerLink="/home/perfil">Perfil</ion-button>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta beatae, maxime dignissimos, iste delectus tenetur asperiores aperiam eum dolores quod tempora impedit laboriosam ea mollitia quis quas exercitationem sunt inventore?</p>
+</div>
